--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "enactus-miranda-house",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,20 +10,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^10.16.16",
-    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "14.0.4",
+    "framer-motion": "^10.16.16"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^3.3.6",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "eslint-config-next": "14.0.4"
   }
 }
